Added the decode page. Updated the main functions so that they would work and return results. Updated the navbar.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,9 @@
-h1 {
-    border: 2px #eee solid;
-    color: brown;
-    text-align: center;
-    padding: 10px;
+@media (min-width: 768px) {
+.navbar-brand.abs {
+        position: absolute;
+        width: auto;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+    }
 }
