--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,13 @@
 <!doctype html>
 {% set nav_bar_left = [
-    ('/', 'index', 'Encode'),
+    ('/', 'index', 'Home'),
+    ('/encode', 'encode', 'Encode'),
     ('/decode', 'decode', 'Decode')
 ] -%}
 {% set nav_bar_right = [
     ('/about', 'about', 'About')
 ] -%}
-{% set active_page = active_page|default('index') -%}
+{% set active_page = active_page|default('idnex') -%}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -25,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand abs" href="{{ url_for('encode') }}">Adam's Message Encryption Scheme</a>
+            <a class="navbar-brand abs" href="{{ url_for('index') }}">Adam's Message Encryption Scheme</a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
