--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,13 @@
 <!doctype html>
 {% set nav_bar_left = [
-    ('/', 'index', 'Home'),
-    ('/encode', 'encode', 'Encode'),
-    ('/decode', 'decode', 'Decode')
+    ('/', 'index', 'Home', 'Go to the welcome page'),
+    ('/encode', 'encode', 'Encode', 'Encode a message'),
+    ('/decode', 'decode', 'Decode', 'Decode a message')
 ] -%}
 {% set nav_bar_right = [
-    ('/about', 'about', 'About')
+    ('/about', 'about', 'About', 'Bonus information')
 ] -%}
-{% set active_page = active_page|default('idnex') -%}
+{% set active_page = active_page|default('index') -%}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -31,34 +31,49 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!--Navbar Image-->
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-file-lock2" viewBox="0 0 16 16">
-              <path d="M8 5a1 1 0 0 1 1 1v1H7V6a1 1 0 0 1 1-1zm2 2.076V6a2 2 0 1 0-4 0v1.076c-.54.166-1 .597-1 1.224v2.4c0 .816.781 1.3 1.5 1.3h3c.719 0 1.5-.484 1.5-1.3V8.3c0-.627-.46-1.058-1-1.224z"/>
-              <path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"/>
-            </svg>
+            {% if active_page == "encode" %}
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-file-lock2" viewBox="0 0 16 16">
+                    <path d="M8 5a1 1 0 0 1 1 1v1H7V6a1 1 0 0 1 1-1zm2 2.076V6a2 2 0 1 0-4 0v1.076c-.54.166-1 .597-1 1.224v2.4c0 .816.781 1.3 1.5 1.3h3c.719 0 1.5-.484 1.5-1.3V8.3c0-.627-.46-1.058-1-1.224z"/>
+                    <path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"/>
+                </svg>
+            {% elif active_page == "decode" %}
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-unlock" viewBox="0 0 16 16">
+                    <path d="M11 1a2 2 0 0 0-2 2v4a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2h5V3a3 3 0 0 1 6 0v4a.5.5 0 0 1-1 0V3a2 2 0 0 0-2-2zM3 8a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1H3z"/>
+                </svg>
+            {% elif active_page == "about" %}
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-info-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                    <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                </svg>
+            {% else %}
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-house-door" viewBox="0 0 16 16">
+                    <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146ZM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5Z"/>
+                </svg>
+            {% endif %}
 
-            <!--Navbar contents-->
+            <!--Navbar items-->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul id="navigation" class="navbar-nav">
-                    {% for href, id, caption in nav_bar_left %}
-                    {% if id == active_page %}
-                        {% set row_class = "nav-link active" %}
-                    {% else %}
-                        {% set row_class = "nav-link" %}
-                    {%endif %}
-                    <li class="nav-item">
-                        <a class="{{ row_class }}" href="{{ href|e }}">{{ caption|e }}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
-                <ul class="navbar-nav ms-auto">
-                    {% for href, id, caption in nav_bar_right %}
+                    {% for href, id, caption, hover in nav_bar_left %}
                     {% if id == active_page %}
                         {% set row_class = "nav-link active" %}
                     {% else %}
                         {% set row_class = "nav-link" %}
                     {% endif %}
                     <li class="nav-item">
-                        <a class="{{ row_class }}" href="{{ href|e }}" data-bs-target="#myModal" data-bs-toggle="modal">{{ caption|e }}</a>
+                        <a class="{{ row_class }}" href="{{ href|e }}" title="{{ hover|e }}">{{ caption|e }}</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    {% for href, id, caption, hover in nav_bar_right %}
+                    {% if id == active_page %}
+                        {% set row_class = "nav-link active" %}
+                    {% else %}
+                        {% set row_class = "nav-link" %}
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="{{ row_class }}" href="{{ href|e }}" title="{{ hover|e }}" data-bs-target="#myModal" data-bs-toggle="modal">{{ caption|e }}</a>
                     </li>
                     {% endfor %}
                 </ul>
@@ -66,6 +81,9 @@
         </div>
     </nav>
     <div class="container">
+        {% for message in get_flashed_messages() %}
+            <div class="alert alert-danger">{{ message }}</div>
+        {% endfor %}
         {% block content %} {% endblock %}
     </div>
 
