--- a/templates/decode.html
+++ b/templates/decode.html
@@ -4,20 +4,25 @@
 {% block content %}
 <h1>{% block title %} Decode a Message {% endblock %}</h1>
 
-<form method="post">
+<form id="decodeForm" method="post">
     <div class="mb-3">
         <!--<label for="inputMessage" class="form-label">Message</label>-->
         <textarea id="inputMessage" maxlength="1000" name="inputMessage" placeholder="Please enter your encoded message here." class="form-control">{{ request.form['inputMessage'] }}</textarea>
+        <br/>
+        <label for="decodeOffset" title="This should be the same value used to encrypt" class="form-label">Select the decryption offset:</label>
+        <input type="number" id="decodeOffset" name="decodeOffset" class="form-control" max="25" min="-25" placeholder="0" form="decodeForm" title="Select a number between -25 and 25 | Defaults to 0">
     </div>
     <div class="mb-3">
-        <button name="decodeSubmit" id="decodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary">Submit</button>
-        <button name="decodeClear" id="decodeClear" value="Clear" type="submit" class="btn btn-outline-danger">Clear</button>
+        <button name="decodeSubmit" id="decodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary" form="decodeForm">Submit</button>
+        <button name="decodeClear" id="decodeClear" value="Clear" type="submit" class="btn btn-outline-danger" form="decodeForm" onClick="clearDecodeForm()">Clear</button>
     </div>
     <hr class="mt-1 mb-3"/>
     <div class="mb-3">
         <textarea id="decodedMessage" name="decodedMessage" rows="10" cols="140" readonly="readonly" placeholder="Decrypted message displayed here." class="form-control">{{ decoded_message }}</textarea>
     </div>
 </form>
+<script src="{{url_for('static', filename='js/decode.js')}}"></script>
+<!-- Done this way so the input is cleared after submitting -->
 <script>
     document.getElementById('inputMessage').value = ""
 </script>
