--- a/templates/encode.html
+++ b/templates/encode.html
@@ -4,20 +4,25 @@
 {% block content %}
 <h1>{% block title %} Encode a Message {% endblock %}</h1>
 
-<form method="post">
+<form id="encodeForm" method="post">
     <div class="mb-3">
         <!--<label for="inputMessage" class="form-label">Message</label>-->
         <input id="inputMessage" type="text" maxlength="500" name="inputMessage" placeholder="Please enter your message here." class="form-control" value="{{ request.form['inputMessage'] }}"/>
+        <br/>
+        <label for="encodeOffset" title="Used to further obfuscate the message" class="form-label">Select the encryption offset:</label>
+        <input type="number" id="encodeOffset" name="encodeOffset" class="form-control" max="25" min="-25" placeholder="0" form="encodeForm" title="Select a number between -25 and 25 | Defaults to 0">
     </div>
     <div class="mb-3">
-        <button name="encodeSubmit" id="encodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary">Submit</button>
-        <button name="encodeClear" id="encodeClear" value="Clear" type="submit" class="btn btn-outline-danger">Clear</button>
+        <button name="encodeSubmit" id="encodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary" form="encodeForm">Submit</button>
+        <button name="encodeClear" id="encodeClear" value="Clear" type="submit" class="btn btn-outline-danger" form="encodeForm" onClick="clearEncodeForm()">Clear</button>
     </div>
     <hr class="mt-1 mb-3"/>
     <div class="mb-3">
     <textarea id="encodedMessage" name="encodedMessage" rows="10" cols="140" readonly="readonly" placeholder="Encrypted message displayed here." class="form-control">{{ encoded_message }}</textarea>
 </div>
 </form>
+<script src="{{url_for('static', filename='js/encode.js')}}"></script>
+<!-- Done this way so the input is cleared after submitting -->
 <script>
     document.getElementById('inputMessage').value = ""
 </script>
