--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,3 +10,9 @@
     text-align: center;
     }
 }
+.card-about {
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
