--- a/templates/about.html
+++ b/templates/about.html
@@ -2,5 +2,26 @@
 {% set active_page = "about" %}
 
 {% block content %}
-<p>About test</p>
+<h1>{% block title %} Website Information: {% endblock %}</h1>
+
+<div class="row">
+    <div class="col-sm-6 card-about">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-github"></i> GitHub</h5>
+                <p class="card-text">Website Source code</p>
+                <a target="_blank" href="https://github.com/adam-bartholomew/encode-message" class="stretched-link"></a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 card-about">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-linkedin"></i> LinkedIn</h5>
+                <p class="card-text">Adam's LinkedIn profile</p>
+                <a target = "_blank" href="https://www.linkedin.com/in/adam-bartholomew/" class="stretched-link"></a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
