--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand abs" href="{{ url_for('index') }}">Adam's Message Encryption Scheme</a>
+            <a class="navbar-brand abs" href="{{ url_for('index') }}">Adam's Message Encoding System</a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
