Change wording of encryption/decryption to encoding/decoding. Add favicon.ico.

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-github"></i> GitHub</h5>
-                <p class="card-text">Website Source code</p>
+                <p class="card-text">Git repository for the Flask Application.</p>
                 <a target="_blank" href="https://github.com/adam-bartholomew/encode-message" class="stretched-link"></a>
             </div>
         </div>
@@ -18,8 +18,16 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-linkedin"></i> LinkedIn</h5>
-                <p class="card-text">Adam's LinkedIn profile</p>
+                <p class="card-text">Adam's LinkedIn profile.</p>
                 <a target = "_blank" href="https://www.linkedin.com/in/adam-bartholomew/" class="stretched-link"></a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 card-about">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title"><img src="{{ url_for('static', filename='image/favicon.ico') }}" width="25" alt="Hieroglyph"/> The Noun Project</h5>
+                <p class="card-text"> "Hieroglyph" icon by Jajang Nurrahman from <a href="https://thenounproject.com/browse/icons/term/hieroglyph/" target="_blank" title="Hieroglyph Icons" class="stretched-link">Noun Project</a></p>
             </div>
         </div>
     </div>
