--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
       <!--Custom CSS-->
       <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
+      <!--Favicon-->
+      <link rel="shortcut icon" type="image/ico" href="{{ url_for('static', filename='image/favicon.ico') }}">
+
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
