--- a/templates/index.html
+++ b/templates/index.html
@@ -8,4 +8,9 @@
         <h5>Please use the links in the navigation bar at the top of the page to select a destination.</h5>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-8 offset-md-2 div-title-center">
+        <p>"Hieroglyph" icon by Jajang Nurrahman from <a href="https://thenounproject.com/browse/icons/term/hieroglyph/" target="_blank" title="Hieroglyph Icons">Noun Project</a></p>
+    </div>
+</div>
 {% endblock %}
