--- a/templates/encode.html
+++ b/templates/encode.html
@@ -6,11 +6,10 @@
 
 <form id="encodeForm" method="post">
     <div class="mb-3">
-        <!--<label for="inputMessage" class="form-label">Message</label>-->
-        <input id="inputMessage" type="text" maxlength="500" name="inputMessage" placeholder="Please enter your message here." class="form-control" value="{{ request.form['inputMessage'] }}"/>
+        <input id="inputMessage" type="text" maxlength="500" name="inputMessage" placeholder="Please enter the message to encode here." class="form-control" value="{{ request.form['inputMessage'] }}"/>
         <br/>
         <label for="encodeOffset" title="Used to further obfuscate the message" class="form-label">Select the encoding offset:</label>
-        <input type="number" id="encodeOffset" name="encodeOffset" class="form-control" max="25" min="-25" placeholder="0" form="encodeForm" title="Select a number between -25 and 25 | Defaults to 0">
+        <input type="number" id="encodeOffset" name="encodeOffset" class="form-control" max="25" min="-25" placeholder="0" form="encodeForm" title="Select a number between -25 and 25, default is 0">
     </div>
     <div class="mb-3">
         <button name="encodeSubmit" id="encodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary" form="encodeForm">Submit</button>
@@ -18,7 +17,7 @@
     </div>
     <hr class="mt-1 mb-3"/>
     <div class="mb-3">
-    <textarea id="encodedMessage" name="encodedMessage" rows="10" cols="140" readonly="readonly" placeholder="Encrypted message displayed here." class="form-control">{{ encoded_message }}</textarea>
+    <textarea id="encodedMessage" name="encodedMessage" rows="10" cols="140" readonly="readonly" placeholder="The encoded message gets displayed here." class="form-control">{{ encoded_message }}</textarea>
 </div>
 </form>
 <script src="{{ url_for('static', filename='js/encode.js') }}"></script>
