--- a/templates/base.html
+++ b/templates/base.html
@@ -20,23 +20,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-      <!--Custom CSS-->
-      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
-      <!--Favicon-->
-      <link rel="shortcut icon" type="image/ico" href="{{ url_for('static', filename='image/favicon.ico') }}">
+    <!--Favicon-->
+    <link rel="shortcut icon" type="image/ico" href="{{ url_for('static', filename='image/favicon.ico') }}">
 
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand abs" href="{{ url_for('index') }}">Adam's Message Encoding System</a>
-            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!--Navbar Image-->
@@ -47,8 +47,8 @@
             {% endfor %}
 
             <!--Navbar Items-->
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul id="navigation" class="navbar-nav">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
                     {% for href, id, caption, hover in nav_bar_left %}
                     {% if id == active_page %}
                         {% set row_class = "nav-link active" %}
@@ -68,7 +68,7 @@
                         {% set row_class = "nav-link" %}
                     {% endif %}
                     <li class="nav-item">
-                        <a class="{{ row_class }}" href="{{ href|e }}" title="{{ hover|e }}" data-bs-target="#myModal" data-bs-toggle="modal">{{ caption|e }}</a>
+                        <a class="{{ row_class }}" href="{{ href|e }}" title="{{ hover|e }}">{{ caption|e }}</a>
                     </li>
                     {% endfor %}
                 </ul>
@@ -86,6 +86,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
     <!-- Optional JavaScript -->
     <script>
