Update readme.md. Add vercel to About. Update welcome page text. Update about page cards.

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 <h1>{% block title %} Website Information: {% endblock %}</h1>
 
 <div class="row">
-    <div class="col-sm-6 card-about">
+    <div class="col-sm-6 div-card-about">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-github"></i> GitHub</h5>
@@ -14,7 +14,7 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-6 card-about">
+    <div class="col-sm-6 div-card-about">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-linkedin"></i> LinkedIn</h5>
@@ -23,11 +23,21 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-6 card-about">
+    <div class="col-sm-6 div-card-about">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title"><img src="{{ url_for('static', filename='image/favicon.ico') }}" width="25" alt="Hieroglyph"/> The Noun Project</h5>
-                <p class="card-text"> "Hieroglyph" icon by Jajang Nurrahman from <a href="https://thenounproject.com/browse/icons/term/hieroglyph/" target="_blank" title="Hieroglyph Icons" class="stretched-link">Noun Project</a></p>
+                <p class="card-text">"Hieroglyph" icon by Jajang Nurrahman from <a href="https://thenounproject.com/browse/icons/term/hieroglyph/" target="_blank">Noun Project</a></p>
+                <a target="_blank" href="https://thenounproject.com/browse/icons/term/hieroglyph/" class="stretched-link"></a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 div-card-about">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title"><i class="bi bi-file-earmark-play-fill"></i> Vercel</h5>
+                <p class="card-text">Application hosted via Vercel</p>
+                <a target="_blank" href="https://www.vercel.com/" class="stretched-link"></a>
             </div>
         </div>
     </div>
