--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,11 @@
     <div class="col-md-8 offset-md-2 div-title-center">
         <h1>{% block title %} Welcome! {% endblock %}</h1>
         <h5>Please use the links in the navigation bar at the top of the page to select a destination.</h5>
+        <p>This application was built to encode and decode an English message around the number of syllables in a word. A more detailed design document can be found in the GitHub repository linked in the "About" section.</p>
     </div>
 </div>
-<div class="row">
+<div class="row fixed-bottom">
+    <hr class="mt-1 mb-3"/>
     <div class="col-md-8 offset-md-2 div-title-center">
         <p>"Hieroglyph" icon by Jajang Nurrahman from <a href="https://thenounproject.com/browse/icons/term/hieroglyph/" target="_blank" title="Hieroglyph Icons">Noun Project</a></p>
     </div>
