Consolidate javascript files. Add copy to clipboard button.

--- a/templates/encode.html
+++ b/templates/encode.html
@@ -17,10 +17,17 @@
     </div>
     <hr class="mt-1 mb-3"/>
     <div class="mb-3">
-    <textarea id="encodedMessage" name="encodedMessage" rows="10" cols="140" readonly="readonly" placeholder="The encoded message gets displayed here." class="form-control">{{ encoded_message }}</textarea>
-</div>
+        <div class="d-flex align-items-center highlight-toolbar ps-3 pe-2 py-1 border-0">
+            <div class="d-flex ms-auto">
+                <button aria-label="Copy to clipboard" data-bs-toggle="tooltip" data-bs-placement="top" title="Copy to clipboard" class="btn btn-outline-secondary btn-sm clipboard-button" type="button" onclick="copyToClipboard('encodedMessage')">
+                    <i class="bi bi-clipboard" aria-hidden="true"></i>
+                </button>
+            </div>
+        </div>
+        <textarea id="encodedMessage" name="encodedMessage" rows="10" cols="140" readonly="readonly" placeholder="The encoded message gets displayed here." class="form-control">{{ encoded_message }}</textarea>
+    </div>
 </form>
-<script src="{{ url_for('static', filename='js/encode.js') }}"></script>
+<script src="{{ url_for('static', filename='js/encodeMessage.js') }}"></script>
 <!-- Done this way so the input is cleared after submitting -->
 <script>
     document.getElementById('inputMessage').value = "";
