--- a/templates/decode.html
+++ b/templates/decode.html
@@ -6,16 +6,13 @@
 
 <form id="decodeForm" method="post">
     <div class="mb-3">
-        <textarea id="inputMessage" maxlength="1000" name="inputMessage" placeholder="Please enter your encoded message here." class="form-control">{{ request.form['inputMessage'] }}</textarea>
-        <br/>
-        <label for="decodeOffset" title="This should be the same value used to encode" class="form-label">Select the decoding offset:</label>
-        <input type="number" id="decodeOffset" name="decodeOffset" class="form-control" max="25" min="-25" placeholder="0" form="decodeForm" title="Select a number between -25 and 25 | Defaults to 0">
+        <textarea id="inputMessage" maxlength="1000" name="inputMessage" placeholder="Please enter your encoded message here." class="form-control" Title="This should contain a date on the first line with text following on each subsequent line.">{{ request.form['inputMessage'] }}</textarea>
     </div>
     <div class="mb-3">
-        <button name="decodeSubmit" id="decodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary" form="decodeForm">Submit</button>
-        <button name="decodeClear" id="decodeClear" value="Clear" type="submit" class="btn btn-outline-danger" form="decodeForm" onClick="clearDecodeForm()">Clear</button>
+        <button name="decodeSubmit" id="decodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary" form="decodeForm" Title="Submit message for decoding">Submit</button>
+        <button name="decodeClear" id="decodeClear" value="Clear" type="submit" class="btn btn-outline-danger" form="decodeForm" onClick="clearDecodeForm()" Title="Clear all page fields">Clear</button>
     </div>
-    <hr class="mt-1 mb-3"/>
+    <hr class="mt-1 mb-1"/>
     <div class="mb-3">
         <div class="d-flex align-items-center highlight-toolbar ps-3 pe-2 py-1 border-0">
             <div class="d-flex ms-auto">
@@ -24,7 +21,7 @@
                 </button>
             </div>
         </div>
-        <textarea id="decodedMessage" name="decodedMessage" rows="10" cols="140" readonly="readonly" placeholder="The decoded message gets displayed here." class="form-control">{{ decoded_message }}</textarea>
+        <textarea id="decodedMessage" name="decodedMessage" rows="20" cols="140" readonly="readonly" placeholder="The decoded message gets displayed here." class="form-control">{{ decoded_message }}</textarea>
     </div>
 </form>
 <script src="{{ url_for('static', filename='js/encodeMessage.js') }}"></script>
