--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,7 +28,12 @@
     padding-left: 10px;
 }
 .clipboard-button {
-    border: none;
+    box-shadow: 1px 1px rgba(0,0,0,.08), 0 0 1px rgba(0,0,0,.05);
+      transition: .1s transform cubic-bezier(.155,1.105,.295,1.12),.1s box-shadow,.1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
+.clipboard-button:hover {
+    transform: scale(1.01);
+    box-shadow: 0 2px 2px rgba(0,0,0,.12), 0 2px 2px rgba(0,0,0,.06);
 }
 .loader {
     position: absolute;
