--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <div class="row fixed-bottom">
     <hr class="mt-1 mb-3"/>
     <div class="col-md-8 offset-md-2 div-title-center">
-        <p>This app is a work in progess. Apologies for any errors or issues encountered. Please stop by the <a target="_blank" href="https://github.com/adam-bartholomew/encode-message">GitHub repo</a> and create an issue if you'd like.</p>
+        <p>"Hieroglyph" icon by Jajang Nurrahman from <a href="https://thenounproject.com/browse/icons/term/hieroglyph/" target="_blank" title="Hieroglyph Icons">Noun Project</a></p>
     </div>
 </div>
 {% endblock %}
