Add and update footers.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,3 +67,6 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+.footer-general{
+    background-color: white;
+}
