--- a/templates/encode.html
+++ b/templates/encode.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>{% block title %} Encode a Message {% endblock %}</h1>
 
-<form id="encodeForm" method="post">
+<form id="encodeForm" method="post" class="form-general">
     <div class="mb-3">
         <input id="inputMessage" type="text" maxlength="500" name="inputMessage" placeholder="Please enter the message to encode here." class="form-control" value="{{ request.form['inputMessage'] }}"/>
         <br/>
