--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <p>This application was built to encode and decode an English message around the number of syllables in a word. A more detailed design document can be found in the GitHub repository linked in the "About" section.</p>
     </div>
 </div>
-<div class="row fixed-bottom">
+<div class="row fixed-bottom footer-general">
     <hr class="mt-1 mb-3"/>
     <div class="col-md-8 offset-md-2 div-title-center">
         <p>This app is a work in progress, apologies for any errors or issues encountered. Please stop by the <a target="_blank" href="https://github.com/adam-bartholomew/encode-message">GitHub repo</a> to create an issue if you'd like.</p>
