--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,16 @@
 <!doctype html>
 {% set nav_bar_left = [
-    ('/', 'index', 'Home', 'Go to the welcome page'),
+    ('/home', 'home', 'Home', 'Go to the welcome page'),
     ('/encode', 'encode', 'Encode', 'Encode a message'),
-    ('/decode', 'decode', 'Decode', 'Decode a message')
-] -%}
-{% set nav_bar_right = [
+    ('/decode', 'decode', 'Decode', 'Decode a message'),
     ('/about', 'about', 'About', 'Bonus information')
 ] -%}
+{% set nav_bar_right = [
+    ('/profile', 'profile', 'Profile', 'User Profile'),
+    ('/logout', 'logout', 'Logout', 'Logout')
+] -%}
 {% set nav_bar_img = [
-    ('index', 'bi-house-door'),
+    ('home', 'bi-house-door'),
     ('encode', 'bi-file-lock2'),
     ('decode', 'bi-unlock'),
     ('about', 'bi-info-circle')
@@ -25,8 +27,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
         <!--MDB-->
-        <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet"/>
--->
+        <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet"/>-->
         <!--Custom CSS-->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
@@ -38,7 +39,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand abs" href="{{ url_for('index') }}">Adam's Message Encoding System</a>
+            <a class="navbar-brand abs" href="{{ url_for('home') }}">Adam's Message Encoding System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
