--- a/myApp/static/css/style.css
+++ b/myApp/static/css/style.css
@@ -21,6 +21,18 @@
     transform: scale(1.02);
     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
+.card-profile{
+    /*border: 1px solid;*/
+    margin-top: 5px;
+    border-radius: 4px;
+    background: #FFFFFF;
+}
+.div-profile-info{
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
 .div-card-about {
     padding-bottom: 5px;
     padding-top: 5px;
