--- a/myApp/templates/home.html
+++ b/myApp/templates/home.html
@@ -9,10 +9,18 @@
         <p>This application was built to encode and decode an English message around the number of syllables in a word. A more detailed design document can be found in the GitHub repository linked in the "About" section.</p>
     </div>
 </div>
-<div class="row fixed-bottom footer-general">
-    <hr class="mt-1 mb-3"/>
-    <div class="col-md-8 offset-md-2 div-title-center">
-        <p>This app is a work in progress, apologies for any errors or issues encountered. Please stop by the <a target="_blank" href="https://github.com/adam-bartholomew/encode-message">GitHub repo</a> to create an issue if you'd like.</p>
+<div id="banner-bottom" class="fixed-bottom">
+    <div class="div-collapse">
+        <button Title="Hide/Show Info" type="button" class="btn btn-sm" data-toggle="collapse" data-target="#collapseFooter" aria-expanded="true" aria-controls="collapseExample">
+            <i class="bi bi-arrow-down-up"></i>
+        </button>
+    </div>
+    <div id="collapseFooter" class="row footer-general collapse show">
+        <hr class="mt-1 mb-3"/>
+        <div class="col-md-8 offset-md-2 div-title-center">
+            <p>This app is a work in progress, apologies for any errors or issues encountered. Please stop by the <a target="_blank" href="https://github.com/adam-bartholomew/encode-message">GitHub repo</a> to create an issue if you'd like.</p>
+        </div>
     </div>
 </div>
+
 {% endblock %}
